--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ pkg_check_modules(PKGCONFIG REQUIRED
     mars_utils
     configmaps
     envire_core
-    envire_base_types
+    envire_types
 )
 
 include_directories(${PKGCONFIG_INCLUDE_DIRS})
